deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: timesheet
  labels:
    name: timesheet
